compile_errors.txt
   Compiling simrs v0.1.0 (/home/ryan/prg/simrs)
error[E0433]: failed to resolve: could not find `location` in the crate root
  --> src/main.rs:14:12
   |
14 | use crate::location::prelude::LocationPlugin;
   |            ^^^^^^^^ could not find `location` in the crate root

For more information about this error, try `rustc --explain E0433`.
error: could not compile `simrs` (bin "simrs") due to 1 previous error
